--- a/index.html
+++ b/index.html
@@ -223,36 +223,6 @@
         class="absolute bottom-4 left-1/2 -translate-x-1/2 flex gap-2 z-10"
         id="slider-dots"
       ></div>
-
-    </section>
-
-
-    <!-- Welcome Message Section -->
-    ...existing code...
-
-    <!-- Call-to-Action Banner (moved and improved) -->
-    <section class="w-full bg-secondary py-14 flex justify-center items-center relative overflow-hidden">
-      <div class="absolute inset-0 opacity-10 bg-[url('./assets/image2.png')] bg-cover bg-center pointer-events-none"></div>
-      <div class="max-w-5xl w-full flex flex-col md:flex-row items-center justify-between gap-8 px-4 relative z-10">
-        <div class="flex-1 text-center md:text-left">
-          <h2 class="text-3xl md:text-4xl font-extrabold text-primary mb-3 tracking-wide drop-shadow">Ready to Shape Your Future?</h2>
-          <p class="text-white text-lg md:text-xl font-medium mb-6 drop-shadow">Explore our programs, apply for admission, or join our world-class research labs today!</p>
-        </div>
-        <div class="flex flex-col md:flex-row gap-4 flex-1 items-center justify-center">
-          <a href="#programs" class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M12 14l9-5-9-5-9 5 9 5z"/><path stroke-linecap="round" stroke-linejoin="round" d="M12 14l6.16-3.422A12.083 12.083 0 0112 21.5a12.083 12.083 0 01-6.16-10.922L12 14z"/></svg>
-            Explore Programs
-          </a>
-          <a href="#programs" class="flex items-center gap-2 bg-primary text-secondary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-white hover:text-primary border-2 border-primary hover:border-secondary transition text-center text-lg">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M16 21v-2a4 4 0 00-8 0v2"/><path stroke-linecap="round" stroke-linejoin="round" d="M12 11a4 4 0 100-8 4 4 0 000 8z"/></svg>
-            Apply Now
-          </a>
-          <a href="#research" class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 21H5a2 2 0 01-2-2V7a2 2 0 012-2h4l2-2 2 2h4a2 2 0 012 2v12a2 2 0 01-2 2z"/></svg>
-            Join Research Labs
-          </a>
-        </div>
-      </div>
     </section>
 
     <!-- Welcome Message Section -->
@@ -293,6 +263,98 @@
           academic community dedicated to knowledge, discovery, and societal
           impact.
         </p>
+      </div>
+    </section>
+
+    <!-- Call-to-Action Banner (moved and improved) -->
+    <section
+      class="w-full bg-secondary py-14 flex justify-center items-center relative overflow-hidden"
+    >
+      <div
+        class="max-w-5xl w-full flex flex-col md:flex-row items-center justify-between gap-8 px-4 relative z-10"
+      >
+        <div class="flex-1 text-center md:text-left">
+          <h2
+            class="text-3xl md:text-4xl font-extrabold text-primary mb-3 tracking-wide drop-shadow"
+          >
+            Ready to Shape Your Future?
+          </h2>
+          <p class="text-white text-lg md:text-xl font-medium mb-6 drop-shadow">
+            Explore our programs, apply for admission, or join our world-class
+            research labs today!
+          </p>
+        </div>
+        <div
+          class="flex flex-col md:flex-row gap-4 flex-1 items-center justify-center"
+        >
+          <a
+            href="#programs"
+            class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg"
+          >
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 14l9-5-9-5-9 5 9 5z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 14l6.16-3.422A12.083 12.083 0 0112 21.5a12.083 12.083 0 01-6.16-10.922L12 14z"
+              />
+            </svg>
+            Explore Programs
+          </a>
+          <a
+            href="#programs"
+            class="flex items-center gap-2 bg-primary text-secondary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-white hover:text-primary border-2 border-primary hover:border-secondary transition text-center text-lg"
+          >
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M16 21v-2a4 4 0 00-8 0v2"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 11a4 4 0 100-8 4 4 0 000 8z"
+              />
+            </svg>
+            Apply Now
+          </a>
+          <a
+            href="#research"
+            class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg"
+          >
+            <svg
+              class="w-6 h-6"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M19 21H5a2 2 0 01-2-2V7a2 2 0 012-2h4l2-2 2 2h4a2 2 0 012 2v12a2 2 0 01-2 2z"
+              />
+            </svg>
+            Join Research Labs
+          </a>
+        </div>
       </div>
     </section>
     <!-- Quick Stats Section -->
