--- a/index.html
+++ b/index.html
@@ -284,75 +284,106 @@
             research labs today!
           </p>
         </div>
-        <div
-          class="flex flex-col md:flex-row gap-4 flex-1 items-center justify-center"
-        >
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 flex-1 w-full">
           <a
             href="#programs"
-            class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg"
+            class="group flex flex-col items-center justify-center bg-white/90 rounded-2xl shadow-xl border-2 border-white hover:border-primary hover:bg-primary/10 transition p-6 text-center h-full min-h-[220px]"
           >
-            <svg
-              class="w-6 h-6"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              viewBox="0 0 24 24"
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-primary/10 mb-3 group-hover:bg-primary/20 transition"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 14l9-5-9-5-9 5 9 5z"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 14l6.16-3.422A12.083 12.083 0 0112 21.5a12.083 12.083 0 01-6.16-10.922L12 14z"
-              />
-            </svg>
-            Explore Programs
+              <svg
+                class="w-8 h-8 text-primary group-hover:text-secondary transition"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 14l9-5-9-5-9 5 9 5z"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 14l6.16-3.422A12.083 12.083 0 0112 21.5a12.083 12.083 0 01-6.16-10.922L12 14z"
+                />
+              </svg>
+            </div>
+            <span
+              class="font-bold text-lg text-primary group-hover:text-secondary transition mb-1"
+              >Explore Programs</span
+            >
+            <span
+              class="text-sm text-primary/70 group-hover:text-primary/90 transition"
+              >Discover our undergraduate and postgraduate offerings</span
+            >
           </a>
           <a
             href="#programs"
-            class="flex items-center gap-2 bg-primary text-secondary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-white hover:text-primary border-2 border-primary hover:border-secondary transition text-center text-lg"
+            class="group flex flex-col items-center justify-center bg-primary rounded-2xl shadow-xl border-2 border-primary hover:border-secondary hover:bg-secondary transition p-6 text-center h-full min-h-[220px]"
           >
-            <svg
-              class="w-6 h-6"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              viewBox="0 0 24 24"
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-secondary/20 mb-3 group-hover:bg-white/30 transition"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M16 21v-2a4 4 0 00-8 0v2"
-              />
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M12 11a4 4 0 100-8 4 4 0 000 8z"
-              />
-            </svg>
-            Apply Now
+              <svg
+                class="w-8 h-8 text-secondary group-hover:text-primary transition"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M16 21v-2a4 4 0 00-8 0v2"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 11a4 4 0 100-8 4 4 0 000 8z"
+                />
+              </svg>
+            </div>
+            <span
+              class="font-bold text-lg text-secondary group-hover:text-primary transition mb-1"
+              >Apply Now</span
+            >
+            <span
+              class="text-sm text-secondary/80 group-hover:text-primary/80 transition"
+              >Start your application and join our academic family</span
+            >
           </a>
           <a
             href="#research"
-            class="flex items-center gap-2 bg-white text-primary font-bold px-7 py-4 rounded-xl shadow-lg hover:bg-primary hover:text-secondary border-2 border-white hover:border-primary transition text-center text-lg"
+            class="group flex flex-col items-center justify-center bg-white/90 rounded-2xl shadow-xl border-2 border-white hover:border-primary hover:bg-primary/10 transition p-6 text-center h-full min-h-[220px]"
           >
-            <svg
-              class="w-6 h-6"
-              fill="none"
-              stroke="currentColor"
-              stroke-width="2"
-              viewBox="0 0 24 24"
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-primary/10 mb-3 group-hover:bg-primary/20 transition"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M19 21H5a2 2 0 01-2-2V7a2 2 0 012-2h4l2-2 2 2h4a2 2 0 012 2v12a2 2 0 01-2 2z"
-              />
-            </svg>
-            Join Research Labs
+              <svg
+                class="w-8 h-8 text-primary group-hover:text-secondary transition"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M19 21H5a2 2 0 01-2-2V7a2 2 0 012-2h4l2-2 2 2h4a2 2 0 012 2v12a2 2 0 01-2 2z"
+                />
+              </svg>
+            </div>
+            <span
+              class="font-bold text-lg text-primary group-hover:text-secondary transition mb-1"
+              >Join Research Labs</span
+            >
+            <span
+              class="text-sm text-primary/70 group-hover:text-primary/90 transition"
+              >Collaborate on innovative research with our faculty</span
+            >
           </a>
         </div>
       </div>
@@ -365,22 +396,103 @@
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
           <!-- Students -->
-          <div class="bg-primary/20 rounded-lg p-6 flex flex-col items-center">
+          <div
+            class="bg-primary/20 rounded-lg p-6 flex flex-col items-center min-h-[200px]"
+          >
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-secondary/20 mb-3"
+            >
+              <svg
+                class="w-8 h-8 text-secondary"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17 20h5v-2a4 4 0 00-3-3.87M9 20H4v-2a4 4 0 013-3.87m9-5a4 4 0 11-8 0 4 4 0 018 0z"
+                />
+              </svg>
+            </div>
             <div class="text-5xl font-extrabold mb-2" data-target="350">0</div>
             <div class="text-lg font-medium">Students</div>
           </div>
           <!-- Faculty -->
-          <div class="bg-primary/20 rounded-lg p-6 flex flex-col items-center">
+          <div
+            class="bg-primary/20 rounded-lg p-6 flex flex-col items-center min-h-[200px]"
+          >
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-secondary/20 mb-3"
+            >
+              <svg
+                class="w-8 h-8 text-secondary"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+                />
+              </svg>
+            </div>
             <div class="text-5xl font-extrabold mb-2" data-target="25">0</div>
             <div class="text-lg font-medium">Faculty</div>
           </div>
           <!-- Research Publications -->
-          <div class="bg-primary/20 rounded-lg p-6 flex flex-col items-center">
+          <div
+            class="bg-primary/20 rounded-lg p-6 flex flex-col items-center min-h-[200px]"
+          >
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-secondary/20 mb-3"
+            >
+              <svg
+                class="w-8 h-8 text-secondary"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M19 21H5a2 2 0 01-2-2V7a2 2 0 012-2h4l2-2 2 2h4a2 2 0 012 2v12a2 2 0 01-2 2z"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 17v-2a2 2 0 012-2h2a2 2 0 012 2v2"
+                />
+              </svg>
+            </div>
             <div class="text-5xl font-extrabold mb-2" data-target="120">0</div>
             <div class="text-lg font-medium">Research Publications</div>
           </div>
           <!-- Labs & Facilities -->
-          <div class="bg-primary/20 rounded-lg p-6 flex flex-col items-center">
+          <div
+            class="bg-primary/20 rounded-lg p-6 flex flex-col items-center min-h-[200px]"
+          >
+            <div
+              class="flex items-center justify-center w-14 h-14 rounded-full bg-secondary/20 mb-3"
+            >
+              <svg
+                class="w-8 h-8 text-secondary"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9.75 17L9 21h6l-.75-4M4 10V5a2 2 0 012-2h12a2 2 0 012 2v5M4 10v10a2 2 0 002 2h12a2 2 0 002-2V10M4 10h16"
+                />
+              </svg>
+            </div>
             <div class="text-5xl font-extrabold mb-2" data-target="10">0</div>
             <div class="text-lg font-medium">Labs & Facilities</div>
           </div>
