--- a/index.html
+++ b/index.html
@@ -499,6 +499,52 @@
         </div>
       </div>
     </section>
+
+    <!-- Mini Gallery / Campus Life Section -->
+    <section class="bg-white py-12" id="mini-gallery">
+      <div class="max-w-7xl mx-auto px-4">
+        <div
+          class="flex flex-col md:flex-row md:items-end md:justify-between mb-8 gap-4"
+        >
+          <div>
+            <h2 class="text-2xl md:text-3xl font-bold text-primary mb-2">
+              Campus Life & Gallery
+            </h2>
+            <p class="text-primary/80 text-base md:text-lg">
+              A glimpse into our vibrant labs, classrooms, and student
+              activities.
+            </p>
+          </div>
+          <a
+            href="gallery.html"
+            class="inline-block mt-2 md:mt-0 bg-primary text-secondary font-semibold px-6 py-2 rounded shadow hover:bg-secondary hover:text-primary border-2 border-primary hover:border-secondary transition"
+            >View Full Gallery</a
+          >
+        </div>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+          <img
+            src="./assets/image1.jpg"
+            alt="Lab"
+            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
+          />
+          <img
+            src="./assets/image2.png"
+            alt="Classroom"
+            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
+          />
+          <img
+            src="./assets/image3.jpg"
+            alt="Event"
+            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
+          />
+          <img
+            src="./assets/image4.png"
+            alt="Student Life"
+            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
+          />
+        </div>
+      </div>
+    </section>
     <script src="./index.js"></script>
   </body>
 </html>
