--- a/index.html
+++ b/index.html
@@ -522,26 +522,58 @@
           >
         </div>
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-          <img
-            src="./assets/image1.jpg"
-            alt="Lab"
-            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
-          />
-          <img
-            src="./assets/image2.png"
-            alt="Classroom"
-            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
-          />
-          <img
-            src="./assets/image3.jpg"
-            alt="Event"
-            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
-          />
-          <img
-            src="./assets/image4.png"
-            alt="Student Life"
-            class="rounded-lg object-cover h-36 w-full shadow-md hover:scale-105 transition"
-          />
+          <!-- Gallery Item 1 -->
+          <div class="group relative flex flex-col items-center">
+            <img
+              src="./assets/image1.jpg"
+              alt="Lab"
+              class="rounded-lg object-cover h-36 w-full shadow-md grayscale group-hover:grayscale-0 transition duration-300"
+            />
+            <div
+              class="absolute bottom-0 left-0 w-full bg-primary text-secondary text-sm font-semibold text-center py-1 rounded-b-lg group-hover:bg-yellow-400 group-hover:text-primary transition duration-300 gourp-hover:scale-105"
+            >
+              Lab
+            </div>
+          </div>
+          <!-- Gallery Item 2 -->
+          <div class="group relative flex flex-col items-center">
+            <img
+              src="./assets/image2.png"
+              alt="Classroom"
+              class="rounded-lg object-cover h-36 w-full shadow-md grayscale group-hover:grayscale-0 transition duration-300"
+            />
+            <div
+              class="absolute bottom-0 left-0 w-full bg-primary/80 text-secondary text-sm font-semibold text-center py-1 rounded-b-lg group-hover:bg-secondary group-hover:text-primary transition duration-300"
+            >
+              Classroom
+            </div>
+          </div>
+          <!-- Gallery Item 3 -->
+          <div class="group relative flex flex-col items-center">
+            <img
+              src="./assets/image3.jpg"
+              alt="Event"
+              class="rounded-lg object-cover h-36 w-full shadow-md grayscale group-hover:grayscale-0 transition duration-300"
+            />
+            <div
+              class="absolute bottom-0 left-0 w-full bg-primary/80 text-secondary text-sm font-semibold text-center py-1 rounded-b-lg group-hover:bg-secondary group-hover:text-primary transition duration-300"
+            >
+              Event
+            </div>
+          </div>
+          <!-- Gallery Item 4 -->
+          <div class="group relative flex flex-col items-center">
+            <img
+              src="./assets/image4.png"
+              alt="Student Life"
+              class="rounded-lg object-cover h-36 w-full shadow-md grayscale group-hover:grayscale-0 transition duration-300"
+            />
+            <div
+              class="absolute bottom-0 left-0 w-full bg-primary/80 text-secondary text-sm font-semibold text-center py-1 rounded-b-lg group-hover:bg-secondary group-hover:text-primary transition duration-300"
+            >
+              Student Life
+            </div>
+          </div>
         </div>
       </div>
     </section>
